# pinokin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: tests.yml  wheels.yml
benchmarks/: bench_vs_rtb.py
cpp/: bindings.cpp  ik_solver.cpp  ik_solver.h  robot.cpp  robot.h
src/pinokin/: __init__.py  _core.pyi  numba_se3.py
tests/: conftest.py  test_batch.py  test_fk.py  test_ik.py  test_jacobian.py  test_numba_se3.py
