[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pinokin"
version = "0.1.0"
description = "FK, Jacobians, and IK for URDF robots — Pinocchio C++ backend with nanobind Python bindings"
license = "MIT"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.scikit-build]
wheel.packages = ["src/pinokin"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]
