[build-system]
requires = ["scikit-build-core>=0.10", "nanobind>=2.0", "numpy>=2.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pinokin"
version = "0.1.1"
description = "FK, Jacobians, and IK for URDF robots — Pinocchio C++ backend with nanobind Python bindings"
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["numpy>=2.0", "numba>=0.60"]

[project.urls]
Repository = "https://github.com/Jepson2k/pinokin"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff", "mypy", "pre-commit"]

[tool.scikit-build]
wheel.packages = ["src/pinokin"]
build-dir = "build/{wheel_tag}"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
files = ["src/pinokin"]
exclude = "(?x)(^build/|^dist/|^\\.venv/)"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["numba", "numba.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]  # line length handled by formatter
